syntax = "proto3";
package dto;

option go_package = "xtek/exchange/__SERVICE_NAME__/pb/contact/dto";

import "contact/types/contact.proto";
import "validate/validate.proto";

message SendMailForIdentificationRequest {
    string email = 1;
    string reason = 2;
    types.ContentTypes type = 3 [(validate.rules).enum.defined_only = true];
  }
  message SendMailForIdentificationResponse {
    bool result = 1;
  }
  message SendMailRequest{
    string payload  = 1;
    types.ContentTypes type = 2 [(validate.rules).enum.defined_only = true];
    string codeVerify = 3;
  }
  message SendMailResponse {
    bool result = 1;
  }
  message CreateContentRequest{
    string from = 1;
    string senderName = 2;
    string subject = 3;
    string content = 4;
    types.ContentTypes type = 5 [(validate.rules).enum.defined_only = true];
  
  }
  message CreateContentResponse {
    bool result = 1;
  }