syntax = "proto3";
package dto;

import "validate/validate.proto";

option go_package = "xtek/exchange/__SERVICE_NAME__/pb/user/dto";

message ReceiveKYCWebhookRequest {
  string status = 1;
  string riskRating = 2;
  double riskScore = 3;
  string referenceID = 4;
  string email = 5;
  string source = 6;
  string id = 7;
  string idType = 8;
  string firstName = 9;
  string lastName = 10;
  string webhookKey = 11;
}